@@ -1,5 +1,6 @@
 1.12	2017-07-31
 		- Bug fix for Redis discovery
+		- zabbix_agentd.conf changed
 
 1.11	2017-07-23
 		- Fixed bugs
